public/styles.css
* {	/* Universal reset */
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

a { /* Remove default styling from anchor tags */
	text-decoration: none;
}

a:link, a:visited {
	color: black;
}

body {
	width: 100vw;
	max-width: 100%;
	font-family: 'Crimson Text', serif;
	font-size: 1.5rem;
	background: rgb(195,207,240);
	background: linear-gradient(90deg, rgba(195,207,240,0.5) 0%, rgba(249,183,190,1) 100%);
}

/*** NAVIGATION ***/

nav {
	display: flex;
	flex-direction: row;
	align-items: center;
	width: 100%;
	max-width: 100%;
	height: 120px;
}

#brand {
	margin: 0 20px 0 20px;
	font-weight: bold;
}

.nav-item {
	padding: 0 10px 0 10px;
	margin: 10px;
}

.nav-item:hover {
	transform: scale(1.1);
}

/* Under each 'nav-item' there is a thin 'underline' to indicate which 'nav-item' is active */
.underline {
	margin-top: 2px;
	height: 3px;
	background-color: black;
}

.no-underline {
	margin-top: 2px;
	height: 3px;
	background-color: transparent;
}

/*** MAIN DISPLAY ***/

main {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	width: 100%;
	height: 600px;
	position: relative;
}

#catalogue-num {
	position: absolute;
	top: 30%;
	left: 20px;
	z-index: 10;
	background-color: transparent;
	color: white;
	font-size: 10rem;
}

main > img {
	height: 100%;
	width: 90%;
	object-fit: cover;
	object-position: center;
}

#controls {
	display: flex;
	flex-direction: row;
	height: 110px;
	width: 230px;
	position: absolute;
	bottom: -55px;
	right: 20px;
	background-color: white;
	padding: 5px;
}

.arrow {
	display: flex;
	justify-content: center;
	width: 50%;
	height: 100%;
	font-size: 4rem;
	color: black;
	transition: all 300ms;
}

#arrow-left {
	border-right: 1px solid black;
}

.arrow:hover {
	font-weight: bold;
}

/*** INFO ***/

#info {
	display: flex;
	flex-direction: column;
	width: 100%;
	padding: 0 10% 0 10%;
	font-size: 1.3rem;
}

#title {
	display: flex;
	align-items: center;
	height: 30%;
	font-size: 2rem;
	margin: 10px 0 20px 0;
	padding-left: 10px;
}

#about {
	display: flex;
	flex-direction: column;
	background-color: white;
	padding: 20px 10px 10px 10px;
}

#author {
	display: flex;
	flex-direction: row;
	align-items: center;
	padding-left: 10px;
}

#author > img {
	width: 80px;
	height: 80px;
	border-radius: 40px;
	object-fit: cover;
	object-position: center;
}

#author-name {
	margin-left: 20px;
}

article {
	padding: 10px;
}

#about > span {
	font-size: 1rem;
	padding: 10px 0 0 10px;
	text-decoration: underline;
}

footer {
	display: flex;
	justify-content: center;
	height: 30px;
	margin: 50px 0 30px 0;
}


/*** NAVIGATION FOR SMALL SCREENS ***/

#small-nav {
	display: none;	/* changes to flex for screens smaller than 800px */
	flex-direction: column;
	justify-content: center;
}

#small-brand {
	display: flex;	
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	height: 8vh;
	padding: 0 30px 0 30px;
	transition: all 300ms;
}

#menu-btn {
	padding-bottom: 12px;
	font-size: 3rem;
	transition: all 300ms;
}

.rotate45 {	/* animates the 'menu-btn' */
	transform: rotate(45deg);
}

.color-white { /* animates the 'small-nav when 'menu-btn' is pressed */
	background-color: white;
}

.small-nav-item {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-content: center;
	height: 60px;
	background-color: white;
	transition: all 300ms ease-in;
}

.hide-small-nav-item { /* animates the 'small-nav-item's to give the feel of expanding and contracting the menu vertically */
	height: 0;
	opacity: 0;
}

/*** CONTACT VIEW ***/

#contact-container {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	width: 100%;
	height: 700px;
}

#contact-info {
	width: 40%;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	font-size: 1.2rem;
	background-color: white;
}

#contact-info  span {
	font-weight: bold;
}

#map {
	width: 40%;
	height: 100%;
	object-fit: cover;
	object-position: center;
}

@media (max-width: 800px) {
	nav {
		display: none;
	}

	#catalogue-num {
		font-size: 5rem;
		top: 5%;
	}

	main {
		height: 80vw;
	}

	#controls {
		width: 180px;
		height: 80px;
	}

	.arrow {
		font-size: 3rem;
	}

	#small-nav {
		display: flex;
	}

	#info {
		padding: 0 4% 0 4%; 
	}

	/*** CONTACT VIEW ***/

	#contact-container {
		flex-direction: column;
		align-items: center;
	}

	#contact-info {
		height: 50%;
		width: 80%;
	}

	#map {
		height: 50%;
		width: 80%;
		order: -1;
	}
}

@media (max-width: 500px) {
	#controls {
		width: 150px;
		height: 60px;
	}

	.arrow {
		font-size: 2rem;
	}

	/*** CONTACT VIEW ***/

	#contact-container {
		width: 90%;
		height: 500px;
	}
}

